# transcoder

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
libs/: CMakeLists.txt
libs/server/: CMakeLists.txt
libs/server/include/: BoostAsio.hpp  ByteBuffer.hpp
libs/server/include/transcode/: ExecuteFileUpload.hpp  ExecuteInterface.hpp  ExecuteList.hpp  Result.hpp  TranscodeServer.hpp  TranscodeSession.hpp
libs/server/src/: ByteBuffer.cpp  CMakeLists.txt
libs/server/src/transcode/: ExecuteFileUpload.cpp  ExecuteInterface.cpp  ExecuteList.cpp  Result.cpp  TranscodeServer.cpp  TranscodeSession.cpp
libs/server/test/: CMakeLists.txt  TranscodeServer.cpp  TranscodeTestClient.hpp
libs/utils/: CMakeLists.txt
libs/utils/src/: CMakeLists.txt
libs/utils/test/: CMakeLists.txt  main.cpp
transcode_server/: CMakeLists.txt  main.cpp
transcode_server/include/: test.hpp
transcode_server/src/: CMakeLists.txt  test.cpp
